--- a/Training/1.0 Introduction.md
+++ b/Training/1.0 Introduction.md
@@ -12,7 +12,14 @@ First we we learn a little bit about coding in Python, although many of you will
 List all the Data Types of Python with examples.  
 
 ```
-
+1. Int ex. 1
+2. Float ex. 1.0
+3. Str ex. 'Hello world!'
+4. List ex. [1,2,3,4,5]
+5. Tuple ex. (1,2,3,4,5)
+6. Complex ex. 25+3j
+7. Dictionary ex. {1:'Monday',2:'Tuesday'}
+8. bool ex. True or False
 ```
 
 ### Task 2: 
@@ -20,7 +27,9 @@ List all the Data Types of Python with examples.
 Other useful ways of storing data are in List, Arrays and Tuples. Create one of each and assign them to the variables a, b and c respectively. 
 
 ```
-
+a = list(("Monday", "Tuesday", "Wednesday"))
+b = ["Monday", "Tuesday", "Wednesday"]
+c = tuple(("Monday", "Tuesday", "Wednesday"))
 ```
 
 ### Task 3: 
@@ -28,13 +37,20 @@ Other useful ways of storing data are in List, Arrays and Tuples. Create one of 
 We are also interested in becoming good software developers so we will need to use conditional, loops. Write an statement where the summation of a variable x+1 will be calculated if the value of x is greater than 2. 
 
 ```
-
+if x > 2:
+  x = x+1
 ```
 
 Now incorporate a for loop to calculate the value of n(x+1) for n repetitions where n=3. Store each value of the for loop in an array named y.  
 
 ```
-
+import random
+y = []
+n = 3
+x = random.randint(1,10)
+for i in range(n):
+  cal = n*(x+1)
+  y.append(cal)
 ```
 
 ### Task 4: 
@@ -42,7 +58,14 @@ Now incorporate a for loop to calculate the value of n(x+1) for n repetitions wh
 Finally we will have a look at creating functions. Functions allow us to compute processes much faster without having to repeat lines of code. Using your code from Task 3, create a function called 'my_cool_function', which takes in the value x and will compute the n(x+1) if x is greater than 2 and for n repetitions where values will be stored in an array named y. Your function will return y. 
 
 ```
-
+def my_cool_function(x):
+    y = []
+    n = 3
+    for i in range(n):
+        if x > 2:
+            cal = n*(x+1)
+            y.append(cal)
+    return y
 ```
 
 ### That is your first introductory python coding assignment completed! Hopefully you are now comfortable basic coding in Python!
