--- a/Training/2.0 Libraries.md
+++ b/Training/2.0 Libraries.md
@@ -13,8 +13,8 @@ Import the numpy library and make a key word for it: np
 Import the pandas library and make a key word for it: pd
 
 ```
-
-
+import numpy as np
+import pandas as pd
 ```
 
 
@@ -25,7 +25,11 @@ Make a two-dimensional numpy array. First row will be: [1,2,3] and second row wi
 Using numpy functionality find the mean, minimum and max value of your array. Index the maximum value and assign it to a variable named max. Index the minimum value and assign it to a variable named min. 
 
 ```
-
+import numpy as np
+array = np.array([[1,2,3],[4,5,6]])
+mean = array.mean()
+max = array.max()
+min = array.min()
 ```
 
 ### Task 2b)
