--- a/Training/2.0 Libraries.md
+++ b/Training/2.0 Libraries.md
@@ -36,7 +36,11 @@ min = array.min()
 Calculate the trimmed mean of the following array using ONLY Numpy and python's base functions: [67,67,65,50,69,68,67,70,69,66]. The trimmed mean is the mean of the data with the largest and the smallest values (outliers) removed.
 
 ```
-
+import numpy as np
+from scipy import stats
+x = 67,67,65,50,69,68,67,70,69,66
+a = stats.trim_mean(x, 0.1)
+print(a)
 ```
 
 ### Task 3
@@ -47,7 +51,12 @@ Create a DataFrame using the Pandas library. Your DataFrame should represent the
 
 
 ```
-
+import numpy as np
+import pandas as pd
+data = {'Patient':['A','B','C'], 'Age':[50,60,70], 'Heart condition':['Arrhythmia','Heart Failure', 'Unstable Angina']}
+df = pd.DataFrame(data)
+df = df.style.hide_index()
+df
 ```
 
 ### Task 4a)
