--- a/Training/2.0 Libraries.md
+++ b/Training/2.0 Libraries.md
@@ -65,14 +65,22 @@ Normally we would want to be able to extract the information from tables directl
 [Training2_example.csv](https://github.com/alepgr/gubmes-hda/blob/main/Training/Training2_example.csv)
 
 ```
-
+import pandas as pd
+data = pd.read_csv('Training2_example.csv')
+df = pd.DataFrame(data)
+df.head()
+# Selecting columns
+df[['Patient', 'Age', 'Condition']]
+# Selcting rows
+df.iloc[[0,1,2]]
 ```
 
 ### Task 4a)
 Using your DataFrame from Task 4a), calculate the average systolic blood pressure of Dementia patients.
 
 ```
-
+averblood = df["Systolic Blood Pressure"].mean()
+print(averblood)
 ```
 
 ### That is the end of the second week of training. Make sure to keep trying out different libraries and their functionalities, this will help a lot with the project!
