--- a/Training/3.0 Visualizations.md
+++ b/Training/3.0 Visualizations.md
@@ -15,7 +15,7 @@ import matplotlib.pyplot as plt
 
 data = pd.read_csv('Training2_example.csv')
 graph = data.plot.scatter(x = 'Age', y = 'Systolic Blood Pressure')
-#The graph shows that there is no relationship between Age and blood pressure, since the dot is randomly.
+#The graph shows that there is no relationship between Age and blood pressure, since the dots are randomly distribute.
 ```
 
 Something else you might want to do with your visualizations is compare the results from different clusters or groups. In our patient data we may want to compare if there is any relationship between specific coditions and other health measurements taken.
