--- a/Training/3.0 Visualizations.md
+++ b/Training/3.0 Visualizations.md
@@ -46,7 +46,13 @@ Using the data from the 2.0 Libraries exercise, now plot the relationship betwee
 [Training2_example.csv](https://github.com/SoFia2401/gubmes-health-data-analytics/files/7404392/Training2_example.csv)
 
 ```
+import pandas as pd
+import seaborn as sns
+import matplotlib.pyplot as plt
 
+data = pd.read_csv('Training2_example.csv')
+condition = data[['Age', 'Condition', 'Systolic Blood Pressure']]
+sns.relplot(x = "Age", y = "Systolic Blood Pressure", hue = "Condition", data = condition);
 ```
 
 
